Web: Refactor Pricing Layout for Open Core Transparency

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -33,7 +33,7 @@
                 <a href="https://github.com/DrSkyle/CloudSlash" target="_blank" class="github-link">
                     GitHub
                 </a>
-                <a href="#download" class="btn-primary-sm">Download Trial</a>
+                <a href="#download" class="btn-primary-sm">Community Edition</a>
             </nav>
         </div>
     </header>
@@ -130,26 +130,38 @@
                 <h2 class="section-title">Flexible Pricing</h2>
                 <div class="pricing-grid">
                     <div class="price-card glass-panel">
-                        <h3>Starter License</h3>
-                        <div class="price">$49<span>/mo</span></div>
-                        <p>One-off audit & cleanup.</p>
-                        <!-- Verified Link -->
-                        <a href="https://checkout.freemius.com/app/22411/plan/37513/" target="_blank" class="btn-secondary-full">Select Plan</a>
+                        <h3>Community</h3>
+                        <div class="price">$0<span>/forever</span></div>
+                        <ul class="features-list">
+                            <li>✅ Unlimited Scans</li>
+                            <li>✅ TUI Dashboard</li>
+                            <li>❌ Reports (PDF/HTML)</li>
+                            <li>❌ Auto-Remediation</li>
+                        </ul>
+                        <a href="#download" class="btn-secondary-full">Download</a>
                     </div>
                     <div class="price-card glass-panel featured">
-                        <div class="badge">MOST POPULAR</div>
+                        <div class="badge">Agencies</div>
                         <h3>Pro License</h3>
                         <div class="price">$499<span>/yr</span></div>
-                        <p>Full Reports + Remediation.</p>
-                        <!-- Verified Link -->
-                        <a href="https://checkout.freemius.com/app/22411/plan/37513/?billing_cycle=annual" target="_blank" class="btn-primary-full">Select Plan</a>
+                        <ul class="features-list">
+                            <li>✅ Unlimited Scans</li>
+                            <li>✅ TUI Dashboard</li>
+                            <li>✅ <strong>Full Reporting</strong></li>
+                            <li>✅ <strong>Terraform Scripts</strong></li>
+                        </ul>
+                        <a href="https://checkout.freemius.com/app/22411/plan/37513/?billing_cycle=annual" target="_blank" class="btn-primary-full">Buy License</a>
                     </div>
                     <div class="price-card glass-panel">
                         <h3>Site License</h3>
                         <div class="price">$1,499</div>
-                        <p>Lifetime access & updates.</p>
-                        <!-- Verified Link -->
-                        <a href="https://checkout.freemius.com/app/22411/plan/37513/?billing_cycle=lifetime" target="_blank" class="btn-secondary-full">Select Plan</a>
+                         <ul class="features-list">
+                            <li>✅ Lifetime Access</li>
+                            <li>✅ Unlimited Seats</li>
+                            <li>✅ Priority Support</li>
+                            <li>✅ Source Modification</li>
+                        </ul>
+                        <a href="https://checkout.freemius.com/app/22411/plan/37513/?billing_cycle=lifetime" target="_blank" class="btn-secondary-full">Buy Lifetime</a>
                     </div>
                 </div>
             </div>
@@ -159,8 +171,8 @@
         <section id="download" class="cta-section">
             <div class="container">
                 <div class="glass-panel centered-panel">
-                    <h2>Stop Burning Cash.</h2>
-                    <p>Run the <strong>Trial Mode</strong> locally. See what you find. No Key Required.</p>
+                    <h2>Open Source & Powerful.</h2>
+                    <p>Run the <strong>Community Edition</strong> locally. Audit your infrastructure for free.</p>
                    <div class="install-widget">
                     <div class="os-tabs">
                         <button class="os-tab active" onclick="setOS('unix')">macOS / Linux</button>
