--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -50,8 +50,8 @@
                         Built with obsession for clean infrastructure and zero waste.
                     </p>
                     <div class="cta-group">
-                        <a href="#download" class="btn-primary">
-                            <span class="icon">⚡</span> Download CLI
+                         <a href="#download" class="btn-primary">
+                            Download CLI
                         </a>
                     </div>
                 </div>
@@ -108,17 +108,17 @@
                     </div>
                     <div class="card glass-panel">
                         <div class="icon">
-                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="5" r="3"/><circle cx="12" cy="19" r="3"/><line x1="12" y1="8" x2="12" y2="16"/></svg>
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.77-3.77a6 6 0 0 1-7.94 7.94l-6.91 6.91a2.12 2.12 0 0 1-3-3l6.91-6.91a6 6 0 0 1 7.94-7.94l-3.76 3.76z"/></svg>
                         </div>
-                        <h3>Orphaned ELBs</h3>
-                        <p>Load Balancers with no registered targets or zero request count for >14 days. Pure waste.</p>
+                        <h3>Reverse-Terraform</h3>
+                        <p><strong>Pro Feature.</strong> CloudSlash generates <code>fix_terraform.sh</code> to surgical remove waste from your state file automatically.</p>
                     </div>
                     <div class="card glass-panel">
                         <div class="icon">
-                           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><line x1="2" y1="12" x2="22" y2="12"/><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"/></svg>
+                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/><circle cx="12" cy="12" r="3"/></svg>
                         </div>
-                        <h3>Loose EIPs</h3>
-                        <p>Elastic IPs allocated but not associated with any running instance. Identifying these clears instant monthly drift.</p>
+                        <h3>Owner Forensics</h3>
+                        <p><strong>Pro Feature.</strong> Who spun up that instance? We trace CloudTrail logs to find the IAM User or Role responsible for the waste.</p>
                     </div>
                 </div>
                 </div>
