--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="cE4g3_aZ9YvRm0_LQtr56jRWuyGS1PzEJw1jICXLTYg" />
     <title>CloudSlash | The Forensic Cloud Accountant</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
@@ -46,8 +47,8 @@
                     <h1 class="glitch-text" data-text="Audit.">Audit.</h1>
                     <h1 class="glitch-text highlight" data-text="Slash.">Slash.</h1>
                     <p class="subtitle">
-                        <strong>Precision engineered</strong> to detect what others miss.<br>
-                        Built with obsession for clean infrastructure and zero waste.
+                        <strong>The Forensic Cloud Accountant for Indie Devs & Startups.</strong><br>
+                        Stop bleeding cash. Discover accurate waste metrics and fix Terraform state without the Enterprise sales calls or contracts.
                     </p>
                     <div class="cta-group">
                          <a href="#download" class="btn-primary">
@@ -75,7 +76,7 @@
 
         <section id="features" class="features">
             <div class="container">
-                <h2 class="section-title">Why CloudSlash?</h2>
+                <h2 class="section-title">Built for Builders, Not Bureaucrats</h2>
                 <div class="grid">
                 <div class="grid">
                     <div class="card glass-panel">
@@ -83,49 +84,42 @@
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 12h-6l-2-9-2 9-6-12-6 12"/></svg>
                         </div>
                         <h3>Deep-Scan Heuristics</h3>
-                        <p>We don't just list resources. We trace their lineage. Found: <strong>Zombie EBS</strong> volumes attached to stopped instances for >30 days.</p>
+                        <p>We trace resource lineage to find what others miss. <strong>Zombie EBS</strong> volumes, hidden snapshots, and orphaned resources are detected instantly.</p>
                     </div>
                     <div class="card glass-panel">
                         <div class="icon">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><path d="M12 6v6l4 2"/></svg>
                         </div>
                         <h3>Vampire NATs</h3>
-                        <p>NAT Gateways charging you hourly while handling < 1GB/month. CloudSlash identifies them instantly via CloudWatch heuristics.</p>
+                        <p>NAT Gateways charging hourly with < 1GB traffic? CloudSlash flags them immediately. Stop paying for idle pipes.</p>
                     </div>
                     <div class="card glass-panel">
                         <div class="icon">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M17.5 19c0-1.7-1.3-3-3-3h-11"/><path d="M11.5 19c0-1.7 1.3-3 3-3h5.3c1.8 0 3.2-1.3 3.2-3s-1.4-3-3.2-3c-.6 0-1.1.2-1.6.5C17.7 7.6 15.1 5 12 5c-3.1 0-5.7 2.6-6.2 5.5-.5-.3-1-.5-1.6-.5-1.8 0-3.2 1.3-3.2 3s1.4 3 3.2 3H11.5z"/></svg>
                         </div>
                         <h3>S3 Ghosts</h3>
-                        <p>Incomplete Multipart Uploads usually invisible in the console. We surface the invisible Terabytes.</p>
+                        <p>Surface invisible Terabytes of incomplete Multipart Uploads that clutter your bill but don't show in the console.</p>
                     </div>
                     <div class="card glass-panel">
                         <div class="icon">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"/><polyline points="3.27 6.96 12 12.01 20.73 6.96"/><line x1="12" y1="22.08" x2="12" y2="12"/></svg>
                         </div>
                         <h3>Fossil Snapshots</h3>
-                        <p>Manual RDS snapshots older than 90 days that are no longer linked to any active database cluster.</p>
+                        <p>Find old RDS snapshots (90+ days) that are detached from any active cluster. Clean up the digital dust.</p>
                     </div>
                     <div class="card glass-panel">
                         <div class="icon">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.77-3.77a6 6 0 0 1-7.94 7.94l-6.91 6.91a2.12 2.12 0 0 1-3-3l6.91-6.91a6 6 0 0 1 7.94-7.94l-3.76 3.76z"/></svg>
                         </div>
                         <h3>Reverse-Terraform</h3>
-                        <p><strong>Pro Feature.</strong> CloudSlash generates <code>fix_terraform.sh</code> to surgical remove waste from your state file automatically.</p>
+                        <p><strong>One-Click Fix.</strong> Generates <code>fix_terraform.sh</code> to surgically remove waste from your state file. No manual hacking required.</p>
                     </div>
                     <div class="card glass-panel">
                         <div class="icon">
                              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/><circle cx="12" cy="12" r="3"/></svg>
                         </div>
-                        <h3>Owner Forensics</h3>
-                        <p><strong>Pro Feature.</strong> Who spun up that instance? We trace CloudTrail logs to find the IAM User or Role responsible for the waste.</p>
-                    </div>
-                    <div class="card glass-panel">
-                        <div class="icon">
-                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20.24 12.24a6 6 0 0 0-8.49-8.49L5 10.5V19h8.5z"></path><line x1="16" y1="8" x2="2" y2="22"></line><line x1="17.5" y1="15" x2="9" y2="15"></line></svg>
-                        </div>
-                        <h3>Tag Suppression</h3>
-                        <p>Keep your dashboard clean. Tag resources as <code>cloudslash:ignore</code> to suppress them from reports permanently or until a specific date.</p>
+                        <h3>The Blame Game</h3>
+                        <p><strong>Owner Forensics.</strong> Who spun up that xlarge instance? CloudSlash traces CloudTrail events to identify the Creator ARN.</p>
                     </div>
                 </div>
                 </div>
@@ -134,7 +128,7 @@
 
         <section id="pricing" class="pricing">
             <div class="container">
-                <h2 class="section-title">Flexible Pricing</h2>
+                <h2 class="section-title">Invest in Efficiency</h2>
                 <div class="pricing-grid">
                     <div class="price-card glass-panel">
                         <h3>Community</h3>
@@ -149,16 +143,16 @@
                     </div>
 
                     <div class="price-card glass-panel featured">
-                        <div class="badge">Recommended</div>
+                        <div class="badge">Most Popular</div>
                         <h3>Pro License</h3>
-                        <div class="price">$49<span>/mo</span></div>
-                        <p style="color: #aaa; margin-bottom: 20px; font-size: 0.9rem;">or $499/year (Save 15%)</p>
+                        <div class="price">$29.99<span>/mo</span></div>
+                        <p style="color: #aaa; margin-bottom: 20px; font-size: 0.9rem;">or $299.99/year (2 months free)</p>
                         <ul class="features-list">
-                            <li>✅ <strong>Everything in Community</strong></li>
-                            <li>✅ <strong>Reverse-Terraform</strong> (Fix Script)</li>
-                            <li>✅ <strong>Owner Forensics</strong> (CloudTrail)</li>
+                            <li>✅ <strong>Reverse-Terraform</strong> Script</li>
+                            <li>✅ <strong>Owner Forensics</strong> (Blame Game)</li>
                             <li>✅ PDF / HTML Reports</li>
                             <li>✅ Priority Support</li>
+                            <li>✅ Commercial Use</li>
                         </ul>
                         <div class="button-group" style="display: flex; gap: 10px; margin-top: 20px;">
                             <a href="https://checkout.freemius.com/app/22411/plan/37513/?billing_cycle=monthly" target="_blank" class="btn-secondary-full" style="margin-top: 0; font-size: 0.9rem; text-align: center;">Monthly</a>
@@ -166,28 +160,18 @@
                         </div>
                     </div>
                     
-                        <div class="price-card glass-panel">
-                        <h3>Site License</h3>
-                        <div class="price">$1,499</div>
-                         <ul class="features-list">
-                            <li>✅ Lifetime Access</li>
-                            <li>✅ Unlimited Seats</li>
-                            <li>✅ Source Modification</li>
-                        </ul>
-                        <a href="https://checkout.freemius.com/app/22411/plan/37513/?billing_cycle=lifetime" target="_blank" class="btn-secondary-full">Buy Lifetime</a>
-                    </div>
-
                     <div class="price-card glass-panel" style="border-color: #ffd700; box-shadow: 0 0 20px rgba(255, 215, 0, 0.1);">
-                        <div class="badge" style="background: #ffd700; color: #000;">Enterprise</div>
-                        <h3 style="color: #ffd700;">Site License</h3>
-                        <div class="price">Custom</div>
+                        <div class="badge" style="background: #ffd700; color: #000;">Best Value</div>
+                        <h3 style="color: #ffd700;">Lifetime Access</h3>
+                        <div class="price">$899.99</div>
+                        <p style="color: #aaa; margin-bottom: 20px; font-size: 0.9rem;">Pay Once. Slash Forever.</p>
                          <ul class="features-list">
-                            <li>✅ <strong>Commercial License</strong></li>
-                            <li>✅ Legal Indemnification</li>
-                            <li>✅ Private Deployment</li>
-                            <li>✅ Internal Integration</li>
+                            <li>✅ <strong>One-time payment</strong></li>
+                            <li>✅ Includes Future Updates</li>
+                            <li>✅ Unlimited Personal Seats</li>
+                            <li>✅ Priority Feature Requests</li>
                         </ul>
-                        <a href="mailto:drskyle8000@gmail.com?subject=Enterprise%20License%20Inquiry" class="btn-secondary-full" style="border-color: #ffd700; color: #ffd700;">Contact Us</a>
+                        <a href="https://checkout.freemius.com/app/22411/plan/37513/?billing_cycle=lifetime" target="_blank" class="btn-secondary-full" style="border-color: #ffd700; color: #ffd700;">Buy Lifetime</a>
                     </div>
                 </div>
             </div>
