feat(core): release v1.2.4 - Ghost Detector & K8s Integ
Implemented the Ghost Detector to catch empty EKS Node Groups. Added direct K8s API integration. Squashed some bugs. We are live.

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -142,36 +142,20 @@
                         <a href="#download" class="btn-secondary-full">Download</a>
                     </div>
 
-                    <div class="price-card glass-panel featured">
-                        <div class="badge">Most Popular</div>
-                        <h3>Pro License</h3>
-                        <div class="price">$29.99<span>/mo</span></div>
-                        <p style="color: #aaa; margin-bottom: 20px; font-size: 0.9rem;">or $299.99/year (2 months free)</p>
+                    <div class="price-card glass-panel featured" style="border-color: #ffd700; box-shadow: 0 0 30px rgba(255, 215, 0, 0.2);">
+                        <div class="badge" style="background: #ffd700; color: #000;">New Year Sale</div>
+                        <h3 style="color: #ffd700;">Lifetime Access</h3>
+                        <div class="price">$49 <span style="text-decoration: line-through; color: #666; font-size: 1rem; margin-left: 8px;">$899</span></div>
+                        <p style="color: #ccc; margin-bottom: 20px; font-size: 0.9rem;"><strong>Limited Time Offer.</strong><br>Pay once, slash cloud waste forever.</p>
                         <ul class="features-list">
+                            <li>✅ <strong>One-time payment</strong></li>
                             <li>✅ <strong>Reverse-Terraform</strong> Script</li>
                             <li>✅ <strong>Owner Forensics</strong> (Blame Game)</li>
                             <li>✅ PDF / HTML Reports</li>
-                            <li>✅ Priority Support</li>
-                            <li>✅ Commercial Use</li>
-                        </ul>
-                        <div class="button-group" style="display: flex; gap: 10px; margin-top: 20px;">
-                            <a href="https://checkout.freemius.com/app/22411/plan/37513/?billing_cycle=monthly" target="_blank" class="btn-secondary-full" style="margin-top: 0; font-size: 0.9rem; text-align: center;">Monthly</a>
-                            <a href="https://checkout.freemius.com/app/22411/plan/37513/?billing_cycle=annual" target="_blank" class="btn-primary-full" style="margin-top: 0; font-size: 0.9rem; text-align: center;">Annual</a>
-                        </div>
-                    </div>
-                    
-                    <div class="price-card glass-panel" style="border-color: #ffd700; box-shadow: 0 0 20px rgba(255, 215, 0, 0.1);">
-                        <div class="badge" style="background: #ffd700; color: #000;">Best Value</div>
-                        <h3 style="color: #ffd700;">Lifetime Access</h3>
-                        <div class="price">$899.99</div>
-                        <p style="color: #aaa; margin-bottom: 20px; font-size: 0.9rem;">Pay Once. Slash Forever.</p>
-                         <ul class="features-list">
-                            <li>✅ <strong>One-time payment</strong></li>
                             <li>✅ Includes Future Updates</li>
-                            <li>✅ Unlimited Personal Seats</li>
-                            <li>✅ Priority Feature Requests</li>
+                            <li>✅ Commercial Use Allowed</li>
                         </ul>
-                        <a href="https://checkout.freemius.com/app/22411/plan/37513/?billing_cycle=lifetime" target="_blank" class="btn-secondary-full" style="border-color: #ffd700; color: #ffd700;">Buy Lifetime</a>
+                        <a href="https://checkout.freemius.com/app/22411/plan/37513/?billing_cycle=lifetime" target="_blank" class="btn-primary-full" style="background: #ffd700; color: #000; border: none; font-weight: 800;">Get Lifetime Deal ($49)</a>
                     </div>
                 </div>
             </div>
